Final Project Test

--- a/dashBoard.html
+++ b/dashBoard.html
@@ -8,10 +8,19 @@
 	<div id="container">
 		<div id="left-sidebar">
 			<nav>
+				<div id="left-logo">
+					<img src="./image/logo.png">
+				</div>
                 <ul>
-                    <li>Menu</li>
+                    <li class="left-nav"><img class="logo-nav" src="./image/newpost.png"><a href="#">New Post</a></li>
+					<li class="left-nav"><img class="logo-nav" src="./image/categories.png"><img<a href="#">Categories</a></li>
+					<li class="left-nav"><img class="logo-nav" src="./image/trainingplan.png"><a href="#">Traning Plan</a></li>
+					<li class="left-nav"><img class="logo-nav" src="./image/profile.png"><a href="#">My Account</a></li>
                 </ul>
             </nav><!-- Left sidebar content goes here -->
+			<div id="Callendar">
+
+			</div>
 		</div>
 		<div id="center-content">
 			<!-- Center content goes here -->
